--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,58 @@
 .current-word {
 	font-family: 'Domine', serif !important;
-}
-
-.current-word {
 	text-transform: capitalize;
+	margin: 0;
 }
 
 .no-pointer-events {
 	pointer-events: none !important;
+}
+
+.app-container {
+	position: fixed;
+	top: 0vh;
+	height: 100%;
+	box-sizing: border-box;
+}
+
+.app-title {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 2.3rem;
+	font-family: 'Alkatra', cursive;
+}
+
+.card-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100vw;
+	height: 100%;
+	overflow: hidden;
+}
+
+.banner-ad-space {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 10vh;
+	background-color: lightgrey;
+}
+
+.mainCard {
+	min-width: 80% !important;
+}
+
+.card-header {
+	display: flex;
+}
+
+.card-header button {
+	margin: 0.3rem 0 0 3rem;
+	border-radius: 50%;
+	border: 3px solid #be76d4;
 }
